--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "gpt_scientist"
-version = "0.1.18"
-description = "A library for processing textual datasets with large language models."
+name = "gpt_scientist_scholar"
+version = "0.0.1"
+description = "A lightweight library for retrieving academic paper data for further processing with gpt-scientist."
 readme = "README.rst"
 authors = [
-  {name = "Nadia Polikarpova", email = "nadia.polikarpova@gmail.com"}
+  {name = "Elena Glassman", email = "elena.glassman@gmail.com"}
 ]
 classifiers = []
 license = {text = "MIT license"}
@@ -25,11 +25,11 @@ dependencies = [
 
 [project.urls]
 
-homepage = "https://github.com/nadia-polikarpova/gpt-scientist"
+homepage = "https://github.com/eglassman/gpt-scientist-scholar"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["gpt_scientist"]
+packages = ["gpt_scientist_scholar"]
 
 [tool.setuptools.package-data]
 gpt_scientist = ["model_pricing.json"]
